# protogame

./: .gitignore  Cargo.toml  designdocthing.md
src/: commands.rs  gun.rs  hands.rs  helpers.rs  legs.rs  main.rs  object.rs  player.rs  projectile.rs  protogame.code-workspace  ui.rs
src/agent/: mod.rs  npc.rs  player.rs
src/body/: hands.rs  head.rs  legs.rs  mod.rs
src/body/organs/: brain.rs  liver.rs  mod.rs  stomach.rs
src/items/: cigarette.rs  food.rs  mod.rs
src/reagents/: container.rs  mod.rs
