[package]
name = "protogame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.1"
bevy_rapier2d = { version = "0.23.0", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
